Finalizando o responsivo para todas as mídias

--- a/index.html
+++ b/index.html
@@ -306,40 +306,40 @@
                     <a href="https://github.com/vandinelsonrocha/8-calculadora" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto outros">
-                    <div href="" class="imagem-projeto">
+                    <div href="#" class="imagem-projeto">
                         <img src="img/formulario-de-cliente.png" alt="imagem de um formulário de cliente">
                         <p class="backend">Backend</p>
                         <p class="techs">#html #css #php</p>
                     </div>
-                    <a href="" class="repositorio repositorio-back" target="_blank" rel="external">Repositório</a>
+                    <a href="https://github.com/vandinelsonrocha/9-formulario_com_base_dados" class="repositorio repositorio-back" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto outros">
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                    <a href="https://jogo-da-sorte-ten.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/jogo-da-sorte.png" alt="imagem da interface de um jogo">
                         <p class="techs">#html #css #js</p>
                     </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                    <a href="https://github.com/vandinelsonrocha/12-Jogo_da_sorte" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto outros">
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                    <a href="https://formulario-ten-sage.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/formulario.png" alt="imagem de um formulário">
                         <p class="techs">#html #css #js</p>
                     </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                    <a href="https://github.com/vandinelsonrocha/5-formulario" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto website">
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                    <a href="https://site-pearson-hardman.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/site-advogados.png" alt="imagem de uma parte da interface de um site de advogados">
                         <p class="techs">#html #css</p>
                     </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                    <a href="https://github.com/vandinelsonrocha/10-site_Pearson_Hardman" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto website">
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                    <a href="https://14-site-de-viagens.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/site-viagens.png" alt="imagem de uma parte da interface de um site de viagens">
                         <p class="techs">#html #css</p>
                     </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                    <a href="https://github.com/vandinelsonrocha/14-Site_de_viagens" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto website">
                     <div class="imagem-projeto">
@@ -436,10 +436,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <!--LINK JAVASCRIPT DA API Swiperjs-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
-    <div class="gtranslate_wrapper"></div>
-    <script>window.gtranslateSettings = {"default_language":"pt","languages":["pt","en","es"],"wrapper_selector":".gtranslate_wrapper","flag_size":16,"switcher_horizontal_position":"right","switcher_vertical_position":"top","switcher_text_color":"#f7f7f7","switcher_arrow_color":"#f2f2f2","switcher_border_color":"#161616","switcher_background_color":"#303030","switcher_background_shadow_color":"#474747","switcher_background_hover_color":"#3a3a3a","dropdown_text_color":"#eaeaea","dropdown_hover_color":"#748393","dropdown_background_color":"#474747"}</script>
-    <script src="https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
 
     <script src="_js/script.js"></script>
 </body>
