Ajustes na responsividade e nos textos.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Vandinelson Rocha Gomes">
+    <meta name="description" content="Sou um desenvolvedor web frontend apaixonado por criar interfaces atraentes e interativas. Neste portfólio, você saberá um pouco sobre mim, minhas habilidades, como também meios para entrar em contato comigo.">
+    <meta name="keywords" content="desenvolvedor frontend, desenvolvimento web, CSS, HTML, JavaScript, portfólio">
     <!--LINK ÍCONES DO FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--LINK DA API Swiperjs-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!--LINKS CSS DO PORTFÓLIO-->
     <link rel="stylesheet" href="_css/reset.css">
-    <link rel="stylesheet" href="_css/home.css">
+    <link rel="stylesheet" href="_css/inicio.css">
     <link rel="stylesheet" href="_css/sobre.css">
     <link rel="stylesheet" href="_css/habilidades.css">
     <link rel="stylesheet" href="_css/experiencia.css">
@@ -41,7 +44,7 @@
                 <h2 class="apresentacao">Olá, meu nome é <span id="meuNome">Vandinelson Gomes</span></h2>
                 <h2 class="apresentacao" id="digitando">Desenvolvedor Web Frontend</h2>
                 <p class="apresentacao">
-                    Este é o meu site oficial de portfólio para mostrar todos os meus trabalhos relacionados com o desenvolvimento web e UI design.
+                    Bem-vindo(a) ao meu mundo, onde você encontra um amante do Desenvolvimento Web. Explore o meu portfólio, onde compartilho meu amor por criar interfaces incríveis e interativas.
                 </p>
                 <ul id="redes-sociais">
                     <li class="rede">
@@ -72,7 +75,9 @@
             <div>
                 <p id="nome">Vandinelson Gomes</p>
                 <p class="texto-sobre">
-                    Crio interfaces de sites ou aplicativos que se adaptam a qualquer dispositivo garantindo uma experiência de usuário intuitiva e agradável, através de tecnologias modernas como HTML, CSS, JavaScript e ReactJS. Capaz de trabalhar em equipe,<span id="mais">...ver mais</span><span id="texto"> entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto. Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área além de possuir habilidades para resolução de problemas.<span id="menos">ver menos</span>
+                    Licenciado em Engenharia de Informática e Telecomunicações (2019 - 2023).
+                    Criei uma paixão pelo desenvolvimento web e desde então tenho focado em  criar experiências digitais incríveis. Minha jornada começou com curiosidade e sede de aprender, e desde então, venho me dedicando incansavelmente para me tornar um profissional altamente qualificado na área. Com conhecimentos em HTML, CSS, JavaScript, React e outras tecnologias sou capaz de criar interfaces atraentes e responsivas que proporcionam uma experiência de usuário intuitiva e agradável, além de trabalhar em equipe, entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto.<span id="mais">...ver mais</span><span id="texto"> Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área. Estou animado para seguir adiante nesta jornada e espero poder contribuir para o sucesso dos seus projetos. Seja na criação de um site responsivo e moderno ou na construção de interfaces intuitivas, estou pronto para enfrentar desafios e levar suas ideias para o próximo nível.
+                    Obrigado por visitar o meu portfólio! Sinta-se à vontade para entrar em contato comigo para conversarmos sobre suas necessidades. Vamos trabalhar juntos para tornar suas ideias em realidade!<span id="menos">ver menos</span>
                     </span>
                 </p>
                 <div id="form-infos">
@@ -102,7 +107,7 @@
             <span></span>
         </div>
         <p>
-            Conhecimento sólido em HTML, CSS, JavaScript e Git. Iniciei meus estudos em React e UI Design, usando o figma, recentemente, com um caminho longo de conhecimentos por adquirir ainda, porém com minha vontade de aprender coisas novas todos os dias, isso é só questão de tempo, além de várias outras tecnologias para fazer projetos profissionais e consistentes.
+            Conhecimento sólido em HTML, CSS, JavaScript e Git. Iniciei meus estudos em React, recentemente, com um caminho longo de conhecimentos por adquirir ainda, porém com minha vontade de aprender coisas novas todos os dias, isso é só questão de tempo, além de várias outras tecnologias para fazer projetos profissionais e consistentes.
         </p>
         <div id="slider">
             <!-- Slider main container -->
@@ -193,7 +198,7 @@
                                 <div class="content">
                                     <h1>Sass</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -208,7 +213,7 @@
                                 <div class="content">
                                     <h1>Tailwind CSS</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -223,7 +228,7 @@
                                 <div class="content">
                                     <h1>TypeScript</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -238,7 +243,7 @@
                                 <div class="content">
                                     <h1>Next.JS</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -253,7 +258,7 @@
                                 <div class="content">
                                     <h1>jQuery</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -268,7 +273,7 @@
                                 <div class="content">
                                     <h1>RESTful API</h1>
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                        [Por aprender em breve!] 
                                     </p>
                                 </div>
                             </div>
@@ -374,7 +379,7 @@
         </div>
     </section>
     <footer id="contato">
-        <div id="grid-form">
+        <div id="flex-form">
             <form action="https://formsubmit.co/vandInforma.tic@gmail.com" method="post">
                 <div class="inputBox">
                     <input type="text" name="nome" id="cmpNome" class="inputUser" required>
@@ -396,7 +401,7 @@
                 <div id="flex-div">
                     <span>Contacte<br>me</span>
                     <p>
-                        Para projetar-mos o seu próximo projeto de sucesso e desfrutares de trabalhos de qualidade.
+                        Para criarmos juntos o seu próximo projeto. Conte com minha dedicação para trabalhos de qualidade.
                     </p>
                 </div>
                 <figure>
