ajustes na responsividade | criação de um efeito de mudança de cor nas bolinhas

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <section id="sobre">
         <h2>Sobre mim</h2>
         <div class="bolinhas">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="bol1"></span>
+            <span class="bol2"></span>
+            <span class="bol3"></span>
         </div>
         <div id="infos">
             <div id="imagem-fundo"></div>
@@ -102,9 +102,9 @@
     <section id="habilidades">
         <h2>Habilidades</h2>
         <div class="bolinhas">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="bol1"></span>
+            <span class="bol2"></span>
+            <span class="bol3"></span>
         </div>
         <p>
             Conhecimento sólido em HTML, CSS, JavaScript e Git. Iniciei meus estudos em React, recentemente, com um caminho longo de conhecimentos por adquirir ainda, porém com minha vontade de aprender coisas novas todos os dias, isso é só questão de tempo, além de várias outras tecnologias para fazer projetos profissionais e consistentes.
@@ -290,9 +290,9 @@
     <section id="projetos">
         <h2>Projetos</h2>
         <div class="bolinhas">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="bol1"></span>
+            <span class="bol2"></span>
+            <span class="bol3"></span>
         </div>
         <div class="modelos-projeto">
             <ul aria-label="Navegação entre modelos específicos de projeto">
