ajustes na responsividade | criação de um efeito de mudança de cor nas bolinhas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="rede">
                         <a href="https://wa.me/2389963939" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
                     </li>
-                    <li class="curriculum"><a href="#">Download CV</a></li>
+                    <li class="curriculum" title="Disponível em breve..."><a href="#">Baixar CV</a></li>
                 </ul>
             </div>
             <img src="img/Vandy.jpg" alt="Minha foto de apresentação">
@@ -75,20 +75,24 @@
             <div>
                 <p id="nome">Vandinelson Gomes</p>
                 <p class="texto-sobre">
-                    Licenciado em Engenharia de Informática e Telecomunicações (2019 - 2023).
-                    Criei uma paixão pelo desenvolvimento web e desde então tenho focado em  criar experiências digitais incríveis. Minha jornada começou com curiosidade e sede de aprender, e desde então, venho me dedicando incansavelmente para me tornar um profissional altamente qualificado na área. Com conhecimentos em HTML, CSS, JavaScript, React e outras tecnologias sou capaz de criar interfaces atraentes e responsivas que proporcionam uma experiência de usuário intuitiva e agradável, além de trabalhar em equipe, entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto.<span id="mais">...ver mais</span><span id="texto"> Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área. Estou animado para seguir adiante nesta jornada e espero poder contribuir para o sucesso dos seus projetos. Seja na criação de um site responsivo e moderno ou na construção de interfaces intuitivas, estou pronto para enfrentar desafios e levar suas ideias para o próximo nível.
-                    Obrigado por visitar o meu portfólio! Sinta-se à vontade para entrar em contato comigo para conversarmos sobre suas necessidades. Vamos trabalhar juntos para tornar suas ideias em realidade!<span id="menos">ver menos</span>
+                    Formado em Engenharia de Informática e Telecomunicações, desenvolvi uma paixão pelo desenvolvimento web e tenho me aperfeiçoado em criar experiências digitais envolventes. Minha jornada começou com curiosidade e ânsia por aprendizado, e desde então, venho me esforçando para me tornar um profissional altamente qualificado. Com conhecimentos em HTML, CSS, JavaScript, React e outras tecnologias, posso criar interfaces atrativas e responsivas que oferecem uma experiência de usuário intuitiva. Além disso, sou colaborativo e capaz de trabalhar em equipe. Busco constantemente a criatividade,<span id="mais">...ver mais</span><span id="texto"> aprendendo e me atualizando para seguir as melhores práticas e tendências do setor. Estou entusiasmado para continuar nessa jornada e contribuir para o sucesso dos projetos. Seja na criação de sites modernos ou em interfaces intuitivas, estou pronto para superar desafios e transformar ideias em projetos concretos. Obrigado por visitar meu portfólio! Fique à vontade para entrar em contato e discutir suas necessidades. Juntos, podemos transformar suas ideias em realidade! <span id="menos">ver menos</span>
                     </span>
                 </p>
                 <div id="form-infos">
                     <button id="formacao" class="sobre-mim">Formação académica</button>
                     <dialog id="dialog">
                         <span>&times</span>
-                        <h2>Title</h2>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi voluptas ipsa voluptatem voluptatibus atque perferendis vero corporis reiciendis accusamus ducimus error laborum, enim consectetur, animi soluta cum alias accusantium illum!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore maiores quidem, iste enim reiciendis blanditiis dolorem fugiat et. Doloribus laboriosam veniam sequi fuga sit facilis sunt illo totam expedita hic.
-                        Libero iste blanditiis impedit ipsum enim ratione, quaerat commodi eaque? Exercitationem, voluptatum ut. Expedita deleniti cumque provident molestias, est distinctio nobis voluptatem, quisquam dolor, sit iste suscipit? Debitis, eligendi fugiat.
-                        Minus sunt, libero vero eligendi reprehenderit ducimus repudiandae atque dolores qui id dicta consectetur, dolore maxime blanditiis quibusdam odio harum ipsam earum maiores quisquam! Quo in obcaecati doloremque eius odio.
+                        <div>
+                            <div id="img-diploma"></div>
+                            <aside id="infos-curso">
+                                <h2><ion-icon name="desktop-outline"></ion-icon>Engenharia de informática e Telecomunicações</h2>
+                                <p>Formação Superior vocacionada para a Internet, cobrindo diversas vertentes que vão desde o planeamento e gestão dos diferentes tipos de redes de Telecomunicações que atualmente compõem a Internet, abrange aspetos da segurança das comunicações e da informação	e a componente de desenvolvimento de aplicações multimédia para dispositivos móveis, programação para redes de sensores viradas para a Internet das Coisas.</p>
+                                <h3><ion-icon name="podium-outline"></ion-icon>Grau conferido</h3>
+                                <span>Licenciatura <br><br></span>
+                                <h3><ion-icon name="timer-outline"></ion-icon>Duração</h3>
+                                <span>4 anos letivos - 8 semestres (2019-2023)</span>
+                            </aside>
+                        </div>
                     </dialog>
                     <div id="mais-infos">
                         <address><i class="fa-solid fa-location-dot"></i> Cabo Verde - São Vicente</address>
