disponibilização do Currículo, ajustes no modal popup e adição de um novo projeto ao Portfólio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="rede">
                         <a href="https://wa.me/2389963939" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
                     </li>
-                    <li class="curriculum" title="Disponível em breve..."><a href="#">Baixar CV</a></li>
+                    <li class="curriculum"><a href="img/Curriculo-Vandinelson_Gomes.pdf" download>Baixar CV</a></li>
                 </ul>
             </div>
             <img src="img/Vandy.jpg" alt="Minha foto de apresentação">
@@ -90,7 +90,11 @@
                                 <h3><ion-icon name="podium-outline"></ion-icon>Grau conferido</h3>
                                 <span>Licenciatura <br><br></span>
                                 <h3><ion-icon name="timer-outline"></ion-icon>Duração</h3>
-                                <span>4 anos letivos - 8 semestres (2019-2023)</span>
+                                <span>4 anos letivos - 8 semestres (2019-2023) <br><br></span>
+                                <h3><ion-icon name="podium-outline"></ion-icon>Universidade</h3>
+                                <span>Instituto Superior de Engenharia e Ciências do Mar <br><br></span>
+                                <h3><ion-icon name="podium-outline"></ion-icon>Localização</h3>
+                                <span>Cabo Verde - São Vicente - Ribeira de Julião</span>
                             </aside>
                         </div>
                     </dialog>
@@ -313,6 +317,13 @@
                         <p class="techs">#html #css #js</p>
                     </a>
                     <a href="https://github.com/vandinelsonrocha/8-calculadora" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li class="projeto outros">
+                    <a href="https://jogo-palavra-secreta-blue.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/jogo-palavra-secreta.png" alt="imagem da interface de um jogo">
+                        <p class="techs">#React</p>
+                    </a>
+                    <a href="https://github.com/vandinelsonrocha/15-Jogo_palavra_secreta" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto outros">
                     <div href="#" class="imagem-projeto">
