CONCLUSÃO DO PORTFÓLIO. Claro, sempre poderá haver melhorias

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <meta name="keywords" content="desenvolvedor frontend, desenvolvimento web, CSS, HTML, JavaScript, portfólio">
     <!--LINK ÍCONES DO FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--LINK DA API Swiperjs-->
+    <!--LINK DA BIBLIOTECA Swiperjs-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!--LINKS CSS DO PORTFÓLIO-->
     <link rel="stylesheet" href="_css/reset.css">
     <link rel="stylesheet" href="_css/inicio.css">
     <link rel="stylesheet" href="_css/sobre.css">
     <link rel="stylesheet" href="_css/habilidades.css">
-    <link rel="stylesheet" href="_css/experiencia.css">
     <link rel="stylesheet" href="_css/projetos.css">
     <link rel="stylesheet" href="_css/contato.css">
     <title>Portfólio | Vandinelson</title>
