Ajustes na responsividade para grandes telas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li class="curriculum"><a href="img/Curriculo-Vandinelson_Gomes.pdf" download>Baixar CV</a></li>
                 </ul>
             </div>
-            <img src="img/Vandy.jpg" alt="Minha foto de apresentação">
+            <img src="img/foto-apresentacao1.png" alt="Minha foto de apresentação">
         </section>
         <a href="#" id="link-topo"><ion-icon name="caret-up-outline"></ion-icon></a>
     </main> 
