:feat: Adição de um novo projeto ao portfólio

--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
                     <a href="https://github.com/vandinelsonrocha/14-Site_de_viagens" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto website">
-                    <div class="imagem-projeto">
-                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
-                        <p class="techs"></p>
-                    </div>
-                    <div class="repositorio">Repositório</div>
+                    <a href="https://17-freelancers-online.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/site-freelancers.png" alt="imagem de uma parte da interface de um site de freelancers online">
+                        <p class="techs">#JavaScript #React #Firebase</p>
+                    </a>
+                    <a href="https://github.com/vandinelsonrocha/17-Freelancers-online" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
                 <li class="projeto website">
                     <div class="imagem-projeto">
